--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,13 @@
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
     "@tanstack/react-query": "^5.62.3",
+    "@types/papaparse": "^5.3.15",
     "axios": "^1.7.9",
     "cypress": "^13.16.1",
     "next": "15.0.4",
+    "papaparse": "^5.4.1",
     "react": "^19.0.0",
+    "react-data-grid": "^7.0.0-beta.47",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "uuid": "^11.0.3"
