--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,9 +25,11 @@
     "react-data-grid": "^7.0.0-beta.47",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
+    "sonner": "^1.7.0",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
