--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,13 @@
-fastapi==0.104.1
+fastapi==0.95.1
+uvicorn==0.22.0
+boto3==1.26.137
+botocore==1.29.137
+pandas==2.0.1
+numpy==1.24.3
 python-multipart==0.0.6
-uvicorn==0.24.0
-boto3==1.34.0
+requests==2.30.0
 python-dotenv==1.0.0
-requests==2.31.0
+typing==3.7.4.3
+uuid==1.30
+asyncio==3.4.3
+httpx==0.24.0
