--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,14 @@
-fastapi==0.95.1
-uvicorn==0.22.0
-boto3==1.26.137
-botocore==1.29.137
-pandas==2.0.1
-numpy==1.24.3
-python-multipart==0.0.6
-requests==2.30.0
-python-dotenv==1.0.0
-typing==3.7.4.3
-uuid==1.30
-asyncio==3.4.3
-httpx==0.24.0
+fastapi
+uvicorn
+boto3
+botocore
+pandas
+numpy
+python-multipart
+requests
+python-dotenv
+typing
+uuid
+asyncio
+httpx
+urllib3
